fixed: overflow heatmap

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -306,14 +306,15 @@ span {
     gap: 24px;
     width: 100%;
     height: 100%;
+    overflow: visible;
 }
 
 #section-activity__content-grid-wrapper {
     display: flex;
     width: 100%;
     margin: auto 0;
-    overflow-x: auto;
-    padding: 0 4px 12px;
+    overflow: auto visible;
+    padding: 12px 4px;
     scrollbar-width: thin;
     scrollbar-color: rgb(255 255 255 / 32%) transparent;
 }
@@ -340,6 +341,7 @@ span {
     width: 80%;
     margin: 0 auto;
     min-width: max-content;
+    overflow: visible;
 }
 
 .section-activity__cell {
